--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -40,6 +40,7 @@
 	<item drawable="xplora" />
 	<item drawable="adblock_browser" />
 	<item drawable="adblock_fast" />
+	<item drawable="aiqfome" />
 	<item drawable="albatross" />
 	<item drawable="fotmob" />
 	<item drawable="fred_meyer" />
@@ -1627,6 +1628,7 @@
 	<item drawable="aimp" />
 	<item drawable="aino" />
 	<item drawable="aio_launcher" />
+	<item drawable="aiqfome" />
 	<item drawable="air_canada" />
 	<item drawable="air_france" />
 	<item drawable="airasia" />
