Add Hide My Applist

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11054,4 +11054,5 @@
 	<item component="ComponentInfo{ai.nokto.wire/ai.nokto.wire.MainActivity}" drawable="artifact" />
 	<item component="ComponentInfo{com.dsquares.lucky/com.dsquares.lucky.screens.mainscreens.single.SingleLuckyActivity}" drawable="lucky_financial" />
 	<item component="ComponentInfo{com.vanuatu.aiqfome/com.vanuatu.aiqfome.ui.Splash.SplashActivity}" drawable="aiqfome" />
+	<item component="ComponentInfo{com.silverlabtm.app.deviceidchanger.free/com.silverlab.app.deviceidchanger.SplashActivity}" drawable="device_id_changer" />
 </resources>
