--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -22,6 +22,7 @@
 	<item drawable="foreground" />
 	<item drawable="gridle" />
 	<item drawable="harry_potter_fan_club" />
+	<item drawable="hide_my_applist" />
 	<item drawable="hiking_project" />
 	<item drawable="holedown" />
 	<item drawable="interpals" />
@@ -3840,6 +3841,7 @@
 	<item drawable="hibymusic" />
 	<item drawable="hicare" />
 	<item drawable="hidden_folks" />
+	<item drawable="hide_my_applist" />
 	<item drawable="hidedroid" />
 	<item drawable="hidrive" />
 	<item drawable="hiit_music" />
