Add Device ID Changer

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11055,4 +11055,5 @@
 	<item component="ComponentInfo{com.dsquares.lucky/com.dsquares.lucky.screens.mainscreens.single.SingleLuckyActivity}" drawable="lucky_financial" />
 	<item component="ComponentInfo{com.vanuatu.aiqfome/com.vanuatu.aiqfome.ui.Splash.SplashActivity}" drawable="aiqfome" />
 	<item component="ComponentInfo{com.silverlabtm.app.deviceidchanger.free/com.silverlab.app.deviceidchanger.SplashActivity}" drawable="device_id_changer" />
+	<item component="ComponentInfo{com.tsng.hidemyapplist/com.tsng.hidemyapplist.MainActivityLauncher}" drawable="hide_my_applist" />
 </resources>
