--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -15,6 +15,8 @@
 	<item drawable="cineworld_cinemas" />
 	<item drawable="comviq" />
 	<item drawable="deutscher_bundestag" />
+	<item drawable="device_id_changer" />
+	<item drawable="device_id_changer_alt" />
 	<item drawable="digikala" />
 	<item drawable="direct_express" />
 	<item drawable="disposable_camera" />
@@ -2939,6 +2941,8 @@
 	<item drawable="deviant__art" />
 	<item drawable="device_connect" />
 	<item drawable="device_id" />
+	<item drawable="device_id_changer" />
+	<item drawable="device_id_changer_alt" />
 	<item drawable="device_info" />
 	<item drawable="device_info_system_and_cpu_info" />
 	<item drawable="devs_base" />
