--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -76,6 +76,16 @@
 	<item drawable="forgetmenot" />
 	<item drawable="easy_xkcd" />
 	<item drawable="private_location" />
+	<item drawable="intesis_ac_cloud" />
+	<item drawable="jojoy" />
+	<item drawable="mastercard" />
+	<item drawable="meitu" />
+	<item drawable="t_mobile_money" />
+	<item drawable="unofficial_acnh_guide" />
+	<item drawable="vivo_themes" />
+	<item drawable="_8bitdo" />
+	<item drawable="image_resizer" />
+	<item drawable="scee" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1476,6 +1486,7 @@
 	<item drawable="_8_ball_pool" />
 	<item drawable="_8bit_painter" />
 	<item drawable="_8bit_photo_lab" />
+	<item drawable="_8bitdo" />
 	<item drawable="_8bitme" />
 	<item drawable="_8fit" />
 	<item drawable="_8tracks" />
@@ -4001,6 +4012,7 @@
 	<item drawable="iko" />
 	<item drawable="il_fatto_quotidiano" />
 	<item drawable="il_post" />
+	<item drawable="image_resizer" />
 	<item drawable="imagepipe" />
 	<item drawable="imagin" />
 	<item drawable="imaging_edge" />
@@ -4060,6 +4072,7 @@
 	<item drawable="interpals" />
 	<item drawable="intesa_investo" />
 	<item drawable="intesa_mobile" />
+	<item drawable="intesis_ac_cloud" />
 	<item drawable="intra" />
 	<item drawable="inure" />
 	<item drawable="inv" />
@@ -4152,6 +4165,7 @@
 	<item drawable="john_gbc" />
 	<item drawable="join" />
 	<item drawable="joiplay" />
+	<item drawable="jojoy" />
 	<item drawable="jollibee" />
 	<item drawable="joox" />
 	<item drawable="joplin" />
@@ -4606,6 +4620,7 @@
 	<item drawable="marvel_snap" />
 	<item drawable="marvel_unlimited" />
 	<item drawable="massive" />
+	<item drawable="mastercard" />
 	<item drawable="mastodon" />
 	<item drawable="maswear" />
 	<item drawable="mat__log" />
@@ -4667,6 +4682,7 @@
 	<item drawable="meinjena" />
 	<item drawable="meinprospekt" />
 	<item drawable="meistertask" />
+	<item drawable="meitu" />
 	<item drawable="mekorama" />
 	<item drawable="melon" />
 	<item drawable="melon_playground" />
@@ -6273,6 +6289,7 @@
 	<item drawable="scanbot" />
 	<item drawable="scarlet" />
 	<item drawable="scb_easy" />
+	<item drawable="scee" />
 	<item drawable="scene_plus" />
 	<item drawable="schalke" />
 	<item drawable="scheduler" />
@@ -6839,6 +6856,7 @@
 	<category title="T" />
 	<item drawable="t3_arena" />
 	<item drawable="t_mobile" />
+	<item drawable="t_mobile_money" />
 	<item drawable="t_mobile_tuesdays" />
 	<item drawable="t_mobile_visual_voicemail" />
 	<item drawable="t_phone" />
@@ -7294,6 +7312,7 @@
 	<item drawable="uniwhere" />
 	<item drawable="unlauncher" />
 	<item drawable="uno" />
+	<item drawable="unofficial_acnh_guide" />
 	<item drawable="unsplash" />
 	<item drawable="untappd" />
 	<item drawable="untis" />
@@ -7420,6 +7439,7 @@
 	<item drawable="vivino" />
 	<item drawable="vivint" />
 	<item drawable="vivo_lock" />
+	<item drawable="vivo_themes" />
 	<item drawable="vizio" />
 	<item drawable="vk_admin" />
 	<item drawable="vk_mail" />
