remove appfilter duplicates, rename icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -840,6 +840,7 @@
 	<item drawable="instacart_shopper_alt" />
 	<item drawable="instagram_alt" />
 	<item drawable="instagram_alt_two" />
+	<item drawable="j2me_loader_alt" />
 	<item drawable="joox_alt" />
 	<item drawable="joplin_alt" />
 	<item drawable="junior_hockey_league_alt" />
@@ -1365,6 +1366,7 @@
 	<item drawable="taskito_alt" />
 	<item drawable="telegram_alt" />
 	<item drawable="texpand_alt" />
+	<item drawable="the_athletic_alt" />
 	<item drawable="the_wallet_alt" />
 	<item drawable="tiktok_alt" />
 	<item drawable="tiktok_alt_two" />
@@ -1378,6 +1380,7 @@
 	<item drawable="trivia_you_alt" />
 	<item drawable="truist_alt" />
 	<item drawable="trust_alt" />
+	<item drawable="tunein_radio_alt" />
 	<item drawable="tunity_alt" />
 	<item drawable="turbo_dismount_alt" />
 	<item drawable="tusky_alt" />
@@ -1976,7 +1979,6 @@
 	<item drawable="asus_weather" />
 	<item drawable="at_and_t" />
 	<item drawable="at_bat" />
-	<item drawable="athletic" />
 	<item drawable="atlas_vpn" />
 	<item drawable="atm_milano" />
 	<item drawable="atmosphere" />
@@ -4179,7 +4181,6 @@
 	<item drawable="journey" />
 	<item drawable="jrummy_busybox" />
 	<item drawable="jslab" />
-	<item drawable="jtwome_loader" />
 	<item drawable="juicessh" />
 	<item drawable="julians_editor" />
 	<item drawable="jumbo" />
@@ -7208,7 +7209,6 @@
 	<item drawable="tuga_browser" />
 	<item drawable="tui" />
 	<item drawable="tumblr" />
-	<item drawable="tune__in" />
 	<item drawable="tunein_radio" />
 	<item drawable="tuner" />
 	<item drawable="tunerly" />
