--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11030,6 +11030,8 @@
 	<item component="ComponentInfo{com.qingniu.renpho/com.renpho.app.main.view.activity.LauncherActivity}" drawable="renpho" />
 	<item component="ComponentInfo{ai.nokto.wire/ai.nokto.wire.MainActivity}" drawable="artifact" />
 	<item component="ComponentInfo{com.dsquares.lucky/com.dsquares.lucky.screens.mainscreens.single.SingleLuckyActivity}" drawable="lucky_financial" />
+	<item component="ComponentInfo{com.silverlabtm.app.deviceidchanger.free/com.silverlab.app.deviceidchanger.SplashActivity}" drawable="device_id_changer" />
+	<item component="ComponentInfo{com.tsng.hidemyapplist/com.tsng.hidemyapplist.MainActivityLauncher}" drawable="hide_my_applist" />
 	<item component="ComponentInfo{com.vanuatu.aiqfome/com.vanuatu.aiqfome.ui.Splash.SplashActivity}" drawable="aiqfome" />
 	<item component="ComponentInfo{com.intesis.intesishome/com.intesis.intesishome.activities.MainActivity}" drawable="intesis_ac_cloud" />
 	<item component="ComponentInfo{io.jojoy/com.example.MainActivity}" drawable="jojoy" />
