fix merge conflicts

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11054,6 +11054,14 @@
 	<item component="ComponentInfo{ai.nokto.wire/ai.nokto.wire.MainActivity}" drawable="artifact" />
 	<item component="ComponentInfo{com.dsquares.lucky/com.dsquares.lucky.screens.mainscreens.single.SingleLuckyActivity}" drawable="lucky_financial" />
 	<item component="ComponentInfo{com.vanuatu.aiqfome/com.vanuatu.aiqfome.ui.Splash.SplashActivity}" drawable="aiqfome" />
-	<item component="ComponentInfo{com.silverlabtm.app.deviceidchanger.free/com.silverlab.app.deviceidchanger.SplashActivity}" drawable="device_id_changer" />
-	<item component="ComponentInfo{com.tsng.hidemyapplist/com.tsng.hidemyapplist.MainActivityLauncher}" drawable="hide_my_applist" />
+	<item component="ComponentInfo{com.intesis.intesishome/com.intesis.intesishome.activities.MainActivity}" drawable="intesis_ac_cloud" />
+	<item component="ComponentInfo{io.jojoy/com.example.MainActivity}" drawable="jojoy" />
+	<item component="ComponentInfo{com.mastercard.hanzo.surpreenda/com.mastercard.hanzo.surpreenda.activities.SplashActivity}" drawable="mastercard" />
+	<item component="ComponentInfo{com.mt.mtxx.mtxx/com.mt.mtxx.mtxx.MainActivity}" drawable="meitu" />
+	<item component="ComponentInfo{com.tmobile.money/crc64944e23a50535ca4e.MainActivity}" drawable="t_mobile_money" />
+	<item component="ComponentInfo{dev.genesy.animalcrossingnhguide/com.animalcrossingnhguide.MainActivity}" drawable="unofficial_acnh_guide" />
+	<item component="ComponentInfo{com.bbk.theme/com.bbk.theme.Theme}" drawable="vivo_themes" />
+	<item component="ComponentInfo{com.abitdo.advance/com.abitdo.advance.activity.SearchActivity}" drawable="_8bitdo" />
+	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.MainActivity}" drawable="image_resizer" />
+	<item component="ComponentInfo{de.westnordost.streetcomplete.expert/de.westnordost.streetcomplete.screens.MainActivity}" drawable="scee" />
 </resources>
