remove ic_* from drawables and move ic_app_default to android

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -91,6 +91,7 @@
 	<item drawable="scee" />
 
 	<category title="Google" />
+	<item drawable="android" />
 	<item drawable="android_auto" />
 	<item drawable="android_device_policy" />
 	<item drawable="android_pay" />
@@ -3985,8 +3986,6 @@
 	<item drawable="ibis_paint" />
 	<item drawable="ibis_paint_x" />
 	<item drawable="ibkr" />
-	<item drawable="ic_app_default" />
-	<item drawable="ic_splash_screen" />
 	<item drawable="icar" />
 	<item drawable="ice_box" />
 	<item drawable="icedrive" />
