--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11043,4 +11043,9 @@
 	<item component="ComponentInfo{com.abitdo.advance/com.abitdo.advance.activity.SearchActivity}" drawable="_8bitdo" />
 	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.MainActivity}" drawable="image_resizer" />
 	<item component="ComponentInfo{de.westnordost.streetcomplete.expert/de.westnordost.streetcomplete.screens.MainActivity}" drawable="scee" />
+	<item component="ComponentInfo{com.etesync.syncadapter/com.etesync.syncadapter.ui.AccountsActivity}" drawable="etesync" />
+	<item component="ComponentInfo{com.johnemulators.johngba/com.johnemulators.common.RomListActivity}" drawable="john_gba" />
+	<item component="ComponentInfo{octohide.vpn/com.octohide.vpn.MainActivity}" drawable="octohide_vpn" />
+	<item component="ComponentInfo{com.scandit.demoapp/com.scandit.demoapp.splash.SplashActivity}" drawable="scandit_barcode_scanner" />
+	<item component="ComponentInfo{apk.screenshotrecorder/com.slaundbr.main}" drawable="screenshot_recorder" />
 </resources>
