--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -89,6 +89,11 @@
 	<item drawable="_8bitdo" />
 	<item drawable="image_resizer" />
 	<item drawable="scee" />
+	<item drawable="etesync" />
+	<item drawable="john_gba" />
+	<item drawable="octohide_vpn" />
+	<item drawable="scandit_barcode_scanner" />
+	<item drawable="screenshot_recorder" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -3241,6 +3246,7 @@
 	<item drawable="esv" />
 	<item drawable="esysta_digital_diabetes_care" />
 	<item drawable="etchdroid" />
+	<item drawable="etesync" />
 	<item drawable="etitulobr" />
 	<item drawable="etoro" />
 	<item drawable="etsy" />
@@ -4170,6 +4176,7 @@
 	<item drawable="jobstreet" />
 	<item drawable="jodel" />
 	<item drawable="joey" />
+	<item drawable="john_gba" />
 	<item drawable="john_gbc" />
 	<item drawable="join" />
 	<item drawable="joiplay" />
@@ -5360,6 +5367,7 @@
 	<item drawable="octi" />
 	<item drawable="octodad_dadliest_catch" />
 	<item drawable="octodroid" />
+	<item drawable="octohide_vpn" />
 	<item drawable="oculus" />
 	<item drawable="odd_bot_out" />
 	<item drawable="odnoklassniki" />
@@ -6294,6 +6302,7 @@
 	<item drawable="scala" />
 	<item drawable="scalak" />
 	<item drawable="scanbot" />
+	<item drawable="scandit_barcode_scanner" />
 	<item drawable="scarlet" />
 	<item drawable="scb_easy" />
 	<item drawable="scee" />
@@ -6322,6 +6331,7 @@
 	<item drawable="screen_time" />
 	<item drawable="screencam_screen_recorder" />
 	<item drawable="screener" />
+	<item drawable="screenshot_recorder" />
 	<item drawable="screenshot_tile" />
 	<item drawable="screwfix" />
 	<item drawable="scribblenauts" />
