--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11048,4 +11048,9 @@
 	<item component="ComponentInfo{octohide.vpn/com.octohide.vpn.MainActivity}" drawable="octohide_vpn" />
 	<item component="ComponentInfo{com.scandit.demoapp/com.scandit.demoapp.splash.SplashActivity}" drawable="scandit_barcode_scanner" />
 	<item component="ComponentInfo{apk.screenshotrecorder/com.slaundbr.main}" drawable="screenshot_recorder" />
+	<item component="ComponentInfo{ch.threema.app.libre/ch.threema.app.activities.MainActivity}" drawable="threema" />
+	<item component="ComponentInfo{.docilealligator.infinityforreddit.plus/ml.docilealligator.infinityforreddit.activities.MainActivity}" drawable="infinity" />
+	<item component="ComponentInfo{com.google.android.GoogleCameraEngR15/com.android.camera.CameraLauncher}" drawable="camera" />
+	<item component="ComponentInfo{com.orange.orangeetmoi/com.orange.care.core.ui.SplashScreenActivity}" drawable="my_orange" />
+	<item component="ComponentInfo{com.officedocument.word.docx.document.viewer/word.alldocument.edit.ui.activity.SplashActivity}" drawable="all_document_reader" />
 </resources>
