new icon: World Scribe

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11053,4 +11053,5 @@
 	<item component="ComponentInfo{com.google.android.GoogleCameraEngR15/com.android.camera.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{com.orange.orangeetmoi/com.orange.care.core.ui.SplashScreenActivity}" drawable="my_orange" />
 	<item component="ComponentInfo{com.officedocument.word.docx.document.viewer/word.alldocument.edit.ui.activity.SplashActivity}" drawable="all_document_reader" />
+	<item component="ComponentInfo{com.averi.worldscribe/com.averi.worldscribe.activities.PrivacyPolicyActivity}" drawable="world_scribe" />
 </resources>
