--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -71,6 +71,7 @@
 	<item drawable="wave" />
 	<item drawable="wealthfront" />
 	<item drawable="widget_lab" />
+	<item drawable="world_scribe" />
 	<item drawable="zello" />
 	<item drawable="zepp_life" />
 	<item drawable="scoresquash" />
@@ -7692,6 +7693,7 @@
 	<item drawable="world_of_goo" />
 	<item drawable="world_of_tanks" />
 	<item drawable="world_of_tanks_assistant" />
+	<item drawable="world_scribe" />
 	<item drawable="worldbox" />
 	<item drawable="worldclock" />
 	<item drawable="wow_companion" />
