new icon: Lexus

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -82,6 +82,7 @@
 	<item drawable="private_location" />
 	<item drawable="intesis_ac_cloud" />
 	<item drawable="jojoy" />
+	<item drawable="lexus" />
 	<item drawable="mastercard" />
 	<item drawable="meitu" />
 	<item drawable="t_mobile_money" />
@@ -4410,6 +4411,7 @@
 	<item drawable="letyshops" />
 	<item drawable="lex" />
 	<item drawable="lexica" />
+	<item drawable="lexus" />
 	<item drawable="lg_app_manager" />
 	<item drawable="lg_home" />
 	<item drawable="lg_smart_world" />
