new icon: Dungeons of Dreadrock

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -21,6 +21,7 @@
 	<item drawable="direct_express" />
 	<item drawable="disposable_camera" />
 	<item drawable="dooz" />
+	<item drawable="dungeons_of_dreadrock" />
 	<item drawable="foreground" />
 	<item drawable="gridle" />
 	<item drawable="harry_potter_fan_club" />
@@ -3117,6 +3118,7 @@
 	<item drawable="duet" />
 	<item drawable="dumb_ways" />
 	<item drawable="dune" />
+	<item drawable="dungeons_of_dreadrock" />
 	<item drawable="dunkin" />
 	<item drawable="dunzo" />
 	<item drawable="duo_mobile" />
