--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11055,4 +11055,5 @@
 	<item component="ComponentInfo{com.officedocument.word.docx.document.viewer/word.alldocument.edit.ui.activity.SplashActivity}" drawable="all_document_reader" />
 	<item component="ComponentInfo{com.averi.worldscribe/com.averi.worldscribe.activities.PrivacyPolicyActivity}" drawable="world_scribe" />
 	<item component="ComponentInfo{com.lexus.oneapp/com.toyota.oneapp.ui.splash.SplashActivity}" drawable="lexus" />
+	<item component="ComponentInfo{com.goongames.DungeonsofDreadrock/com.unity3d.player.UnityPlayerActivity}" drawable="dungeons_of_dreadrock" />
 </resources>
