new icon: edumerge

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11056,4 +11056,5 @@
 	<item component="ComponentInfo{com.averi.worldscribe/com.averi.worldscribe.activities.PrivacyPolicyActivity}" drawable="world_scribe" />
 	<item component="ComponentInfo{com.lexus.oneapp/com.toyota.oneapp.ui.splash.SplashActivity}" drawable="lexus" />
 	<item component="ComponentInfo{com.goongames.DungeonsofDreadrock/com.unity3d.player.UnityPlayerActivity}" drawable="dungeons_of_dreadrock" />
+	<item component="ComponentInfo{com.edumerge.dashboard/com.edumerge.dashboard.MainActivity}" drawable="edumerge" />
 </resources>
