--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -80,6 +80,7 @@
 	<item drawable="sai_fdroid" />
 	<item drawable="forgetmenot" />
 	<item drawable="easy_xkcd" />
+	<item drawable="edumerge" />
 	<item drawable="private_location" />
 	<item drawable="intesis_ac_cloud" />
 	<item drawable="jojoy" />
@@ -3179,6 +3180,7 @@
 	<item drawable="editor" />
 	<item drawable="edmodo" />
 	<item drawable="educamos_familias" />
+	<item drawable="edumerge" />
 	<item drawable="edupage" />
 	<item drawable="edx" />
 	<item drawable="eero" />
