new icon: Suunto

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -62,6 +62,7 @@
 	<item drawable="reolink" />
 	<item drawable="showmax" />
 	<item drawable="soco" />
+	<item drawable="suunto" />
 	<item drawable="swellnet" />
 	<item drawable="the_athletic" />
 	<item drawable="trivia_crack" />
@@ -6832,6 +6833,7 @@
 	<item drawable="survivor_io" />
 	<item drawable="sushi" />
 	<item drawable="sushi_personal_finance" />
+	<item drawable="suunto" />
 	<item drawable="svyaznoi_travel" />
 	<item drawable="swapcard" />
 	<item drawable="swapfiets" />
