--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11057,4 +11057,5 @@
 	<item component="ComponentInfo{com.lexus.oneapp/com.toyota.oneapp.ui.splash.SplashActivity}" drawable="lexus" />
 	<item component="ComponentInfo{com.goongames.DungeonsofDreadrock/com.unity3d.player.UnityPlayerActivity}" drawable="dungeons_of_dreadrock" />
 	<item component="ComponentInfo{com.edumerge.dashboard/com.edumerge.dashboard.MainActivity}" drawable="edumerge" />
+	<item component="ComponentInfo{com.stt.android.suunto/com.stt.android.launcher.ProxyActivity}" drawable="suunto" />
 </resources>
