--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11058,4 +11058,5 @@
 	<item component="ComponentInfo{com.goongames.DungeonsofDreadrock/com.unity3d.player.UnityPlayerActivity}" drawable="dungeons_of_dreadrock" />
 	<item component="ComponentInfo{com.edumerge.dashboard/com.edumerge.dashboard.MainActivity}" drawable="edumerge" />
 	<item component="ComponentInfo{com.stt.android.suunto/com.stt.android.launcher.ProxyActivity}" drawable="suunto" />
+	<item component="ComponentInfo{io.devizer.pokerbase/host.exp.exponent.MainActivity}" drawable="pokerbase" />
 </resources>
