new icon: Japanese Guru

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11059,4 +11059,5 @@
 	<item component="ComponentInfo{com.edumerge.dashboard/com.edumerge.dashboard.MainActivity}" drawable="edumerge" />
 	<item component="ComponentInfo{com.stt.android.suunto/com.stt.android.launcher.ProxyActivity}" drawable="suunto" />
 	<item component="ComponentInfo{io.devizer.pokerbase/host.exp.exponent.MainActivity}" drawable="pokerbase" />
+	<item component="ComponentInfo{com.xamisoft.japaneseguru/com.xamisoft.japaneseguru.MainActivity}" drawable="japanese_guru" />
 </resources>
