--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -85,6 +85,7 @@
 	<item drawable="edumerge" />
 	<item drawable="private_location" />
 	<item drawable="intesis_ac_cloud" />
+	<item drawable="japanese_guru" />
 	<item drawable="jojoy" />
 	<item drawable="lexus" />
 	<item drawable="mastercard" />
@@ -4154,6 +4155,7 @@
 	<item drawable="jager" />
 	<item drawable="jakdojade" />
 	<item drawable="james_dsp" />
+	<item drawable="japanese_guru" />
 	<item drawable="java_forum_nord" />
 	<item drawable="javvy" />
 	<item drawable="jaybird" />
